# fractfs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: aws.md  azure.md  databricks.md  deployment.md  gcp.md  tiers.md
examples/: .fractfs.toml  app.py
src/fractfs/: __init__.py  backend.py  config.py  fsspec_backend.py  patterns.py  provisioner.py  resolver.py  sync.py
tests/: conftest.py  test_bundle.py  test_config.py  test_fsspec_backend.py  test_init.py  test_pinning.py  test_provisioner.py  test_resolver.py  test_sync.py
